--- a/src/calculator/FXMLDocument.fxml
+++ b/src/calculator/FXMLDocument.fxml
@@ -12,148 +12,149 @@
 <AnchorPane id="AnchorPane" prefHeight="382.0" prefWidth="505.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="calculator.FXMLDocumentController">
     <children>
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <GridPane layoutY="97.0" prefHeight="285.0" prefWidth="505.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button fx:id="one" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="1" GridPane.rowIndex="4">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="two" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="2" GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="three" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="four" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="4" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="five" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="six" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="seven" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="7" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="eight" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="nine" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="zero" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="0" GridPane.columnIndex="1" GridPane.rowIndex="5">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="plus" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="+" GridPane.columnIndex="3" GridPane.rowIndex="4">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="minus" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="-" GridPane.columnIndex="3" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="multi" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="x" GridPane.columnIndex="3" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="divide" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="÷" GridPane.columnIndex="3" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="equalButton" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="=" GridPane.columnIndex="3" GridPane.rowIndex="5">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="ClearResults" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="CLR" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="one1" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="spare" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="one2" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="⌂" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Button>
-            <Button fx:id="one3" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="." GridPane.columnIndex="2" GridPane.rowIndex="5">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="one4" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="±" GridPane.rowIndex="5">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="one5" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="\%">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="one6" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="1" GridPane.columnIndex="1">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="one7" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="X²" GridPane.columnIndex="2">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="one8" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="1" GridPane.columnIndex="3">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-         </children>
-      </GridPane>
-      <TextField fx:id="display" alignment="CENTER_RIGHT" editable="false" layoutY="-1.0" prefHeight="101.0" prefWidth="505.0">
-         <font>
-            <Font name="System Bold" size="41.0" />
-         </font>
-      </TextField>
+        <GridPane layoutY="97.0" prefHeight="285.0" prefWidth="505.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Button fx:id="one" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="1" GridPane.rowIndex="4">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="two" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="2" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="three" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="four" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="4" GridPane.rowIndex="3">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="five" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="six" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="seven" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="7" GridPane.rowIndex="2">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="eight" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="nine" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="zero" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="plus" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="+" GridPane.columnIndex="3" GridPane.rowIndex="4">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="minus" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="-" GridPane.columnIndex="3" GridPane.rowIndex="3">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="multi" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="x" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="divide" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="÷" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="equalButton" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="=" GridPane.columnIndex="3" GridPane.rowIndex="5">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="ClearResults" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="CLR" GridPane.rowIndex="1">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+           
+                <Button fx:id="decimal" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="." GridPane.columnIndex="2" GridPane.rowIndex="5">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="PlusMinus" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="±" GridPane.rowIndex="5">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="Modulo" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="\%">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="SQROOT" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="SQU" GridPane.columnIndex="1">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="X2" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="X²" GridPane.columnIndex="2">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="fraction" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="1/x" GridPane.columnIndex="3">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="CE" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="CE" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+                <Button fx:id="delete" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="DEL" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                    <font>
+                        <Font name="System Bold" size="21.0" />
+                    </font>
+                </Button>
+            </children>
+        </GridPane>
+        <TextField fx:id="display" alignment="CENTER_RIGHT" editable="false" layoutY="-1.0" prefHeight="101.0" prefWidth="505.0">
+            <font>
+                <Font name="System Bold" size="41.0" />
+            </font>
+        </TextField>
     </children>
 </AnchorPane>
