--- a/src/myCSS.css
+++ b/src/myCSS.css
@@ -11,5 +11,9 @@ and open the template in the editor.
 
 .button{
     
-    -fx-background-color: #16c904;
+    -fx-background-color: #2fd179;
+}
+
+.button:hover{
+    -fx-text-fill: whitesmoke;
 }
