--- a/src/calculator/FXMLDocument.fxml
+++ b/src/calculator/FXMLDocument.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,10 +9,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="382.0" prefWidth="505.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="calculator.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="431.0" prefWidth="505.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="calculator.FXMLDocumentController">
     <children>
-        <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-        <GridPane layoutY="97.0" prefHeight="285.0" prefWidth="505.0">
+        <GridPane layoutY="159.0" prefHeight="305.0" prefWidth="505.0" AnchorPane.bottomAnchor="0.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -25,133 +24,150 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button fx:id="one" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="1" GridPane.rowIndex="4">
+                <Button fx:id="one" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="1" textFill="#e7e5e5" GridPane.rowIndex="4">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="two" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="2" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                <Button fx:id="six" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="6" textFill="#e7e5e5" GridPane.columnIndex="2" GridPane.rowIndex="3">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="three" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                <Button fx:id="two" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="2" textFill="#e7e5e5" GridPane.columnIndex="1" GridPane.rowIndex="4">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="four" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="4" GridPane.rowIndex="3">
+                <Button fx:id="three" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="3" textFill="#e7e5e5" GridPane.columnIndex="2" GridPane.rowIndex="4">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="five" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <Button fx:id="four" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="4" textFill="#e7e5e5" GridPane.rowIndex="3">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="six" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                <Button fx:id="five" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="5" textFill="#e7e5e5" GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="seven" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="7" GridPane.rowIndex="2">
+                <Button fx:id="seven" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="7" textFill="#e7e5e5" GridPane.rowIndex="2">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="eight" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <Button fx:id="eight" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="8" textFill="#e7e5e5" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="nine" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                <Button fx:id="nine" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="9" textFill="#e7e5e5" GridPane.columnIndex="2" GridPane.rowIndex="2">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="zero" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                <Button fx:id="zero" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="0" textFill="#e7e5e5" GridPane.columnIndex="1" GridPane.rowIndex="5">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="plus" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="+" GridPane.columnIndex="3" GridPane.rowIndex="4">
+                <Button fx:id="plus" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="+" textFill="#e7e5e5" GridPane.columnIndex="3" GridPane.rowIndex="4">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="minus" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="-" GridPane.columnIndex="3" GridPane.rowIndex="3">
+                <Button fx:id="minus" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="-" textFill="#e7e5e5" GridPane.columnIndex="3" GridPane.rowIndex="3">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="multi" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="x" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                <Button fx:id="multi" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="x" textFill="#e7e5e5" GridPane.columnIndex="3" GridPane.rowIndex="2">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="divide" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="÷" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                <Button fx:id="divide" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="÷" textFill="#e7e5e5" GridPane.columnIndex="3" GridPane.rowIndex="1">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="equalButton" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="=" GridPane.columnIndex="3" GridPane.rowIndex="5">
+                <Button fx:id="equalButton" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="=" textFill="#e7e5e5" GridPane.columnIndex="3" GridPane.rowIndex="5">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="ClearResults" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="CLR" GridPane.rowIndex="1">
+                <Button fx:id="ClearResults" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="CLR" textFill="#e7e5e5" GridPane.rowIndex="1">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
            
-                <Button fx:id="decimal" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="." GridPane.columnIndex="2" GridPane.rowIndex="5">
+                <Button fx:id="decimal" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="." textFill="#e7e5e5" GridPane.columnIndex="2" GridPane.rowIndex="5">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="PlusMinus" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="±" GridPane.rowIndex="5">
+                <Button fx:id="PlusMinus" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../alterColour.css" text="±" textFill="#e7e5e5" GridPane.rowIndex="5">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="Modulo" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="Mod">
+                <Button fx:id="Modulo" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="Mod" textFill="#e7e5e5">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="SQROOT" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="SQU" GridPane.columnIndex="1">
+                <Button fx:id="SQROOT" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="SQU" textFill="#e7e5e5" GridPane.columnIndex="1">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="X2" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="X²" GridPane.columnIndex="2">
+                <Button fx:id="X2" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="X²" textFill="#e7e5e5" GridPane.columnIndex="2">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="fraction" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="1/x" GridPane.columnIndex="3">
+                <Button fx:id="fraction" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="1/x" textFill="#e7e5e5" GridPane.columnIndex="3">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
                 </Button>
-                <Button fx:id="CE" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="CE" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <Button fx:id="CE" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" text="CE" textFill="#e7e5e5" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
+               <stylesheets>
+                  <URL value="@../myCSS.css" />
+                  <URL value="@../alterColour.css" />
+               </stylesheets>
                 </Button>
-                <Button fx:id="delete" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" stylesheets="@../myCSS.css" text="DEL" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                <Button fx:id="delete" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="72.0" prefWidth="134.0" text="DEL" textFill="#e7e5e5" GridPane.columnIndex="2" GridPane.rowIndex="1">
                     <font>
                         <Font name="System Bold" size="21.0" />
                     </font>
+               <stylesheets>
+                  <URL value="@../myCSS.css" />
+                  <URL value="@../alterColour.css" />
+               </stylesheets>
                 </Button>
             </children>
         </GridPane>
-        <TextField fx:id="display" alignment="CENTER_RIGHT" editable="false" layoutY="-1.0" prefHeight="101.0" prefWidth="505.0">
+      <TextField fx:id="displayTop" alignment="CENTER_RIGHT" editable="false" layoutY="49.0" prefHeight="28.0" prefWidth="505.0" AnchorPane.topAnchor="0.0">
+         <font>
+            <Font name="System Italic" size="18.0" />
+         </font>
+         <stylesheets>
+            <URL value="@../myCSS.css" />
+            <URL value="@../alterColour.css" />
+         </stylesheets>
+      </TextField>
+        <TextField fx:id="display" alignment="CENTER_RIGHT" editable="false" layoutY="39.0" prefHeight="61.0" prefWidth="505.0" stylesheets="@../myCSS.css">
             <font>
                 <Font name="System Bold" size="41.0" />
             </font>
