--- a/src/alterColour.css
+++ b/src/alterColour.css
@@ -25,6 +25,11 @@ and open the template in the editor.
 
 .text-field {
     -fx-background-color: #000000 ;
-    -fx-text-inner-color: #4E4E4E;
+    -fx-text-inner-color: whitesmoke;
 
+}
+
+.pane{
+    -fx-background-color: #000000 ;
+    
 }
